syntax = "proto3";

package pb;

import "rpc_create_user.proto";

option go_package = "github.com/pawaspy/simple_bank/pb";

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}